--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,20 @@
 [package]
-name = "steam-api-rs"
-version = "0.1.0"
-authors = ["Aleksey Grachev <alg37@yandex-team.ru>"]
+name = "steam-web-api-rs"
+version = "0.1.1"
+authors = ["Aleksey Grachev <sibware@yandex.ru>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 tracing = "0.1"
-chrono = "0.4"
+chrono = { version = "0.4", features = ["serde"] }
+anyhow = "1.0.42"
+reqwest = "0.11"
+bytes = "1.0.1"
+url = "1.7.2"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+serde-aux = "2.2.0"
+thiserror = "1.0"
+itertools = "0.9.0"
